easy form of exclusive groups